@@ -116,6 +116,12 @@ class IMP_Views_ShowMessage
             return $result;
         }
 
+        if (!isset($fetch_ret[$uid]['headertext'])) {
+            $result['error'] = $error_msg;
+            $result['errortype'] = 'horde.error';
+            return $result;
+        }
+
         /* Parse MIME info and create the body of the message. */
         try {
             $imp_contents = $GLOBALS['injector']->getInstance('IMP_Contents')->getOb(new IMP_Indices($mailbox, $uid));
@@ -250,10 +256,12 @@ class IMP_Views_ShowMessage
             IMP_Contents::SUMMARY_DESCRIP_LINK |
             IMP_Contents::SUMMARY_DOWNLOAD |
             IMP_Contents::SUMMARY_DOWNLOAD_ZIP |
-            IMP_Contents::SUMMARY_PRINT_STUB;
+            IMP_Contents::SUMMARY_PRINT_STUB |
+            IMP_Contents::SUMMARY_STRIP_STUB;
 
         $part_info = $part_info_display = array('icon', 'description', 'size', 'download', 'download_zip');
         $part_info_display[] = 'print';
+        $part_info_display[] = 'strip';
 
         /* Do MDN processing now. */
         if ($imp_ui->MDNCheck($mailbox, $uid, $mime_headers)) {
